# CS4032-Project

./: README.md
Security/: todo.txt  (+2 more)
directory-server/: directory-server.cabal  docker-compose.yml  stack.yaml
directory-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/flag-cache/: base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  bytestring-conversion-0.3.1-EvX949he2UAKBbGbE7IZfu  cryptonite-0.19-G9PYO4oOEqhDTta2u9rAaU  double-conversion-2.0.1.0-GBJeLbJOvPcIufCPOIwofV  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.7-E7H6TuZQzia59KuB50vayl  file-embed-0.0.10-IXfudWSq57y1Athysk5ifZ  hashtables-1.2.1.0-97BixhaJIWTIDAaThqJujl  http-api-data-0.2.4-3jwS7OrPl3l4oJfG3gRZ5C  http-media-0.6.4-82jDVCpdN5H696EFF5l5I4  network-uri-2.6.1.0-DDHh2FNiPirBRgkuU9DEt2  optparse-applicative-0.12.1.0-LOTKI1ZYRJkF3RPPjfyooJ  securemem-0.1.9-AlUbMorzPNe4lwnV15ASIa  semigroups-0.18.2-2lmUSJvrDkM6JBURGRclWz  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  syb-0.6-C65vWCsht6A8uLstpQIXyj  transformers-base-0.4.4-25SoAegOdaF8rLEnnb5jPI  unix-time-0.3.7-HcxGsrnTmTlC98pyanzoMW  wai-3.2.1.1-f77bMYZGLQBAD3XJrvGiW  word8-0.1.2-2E1SgvvAV2fK8vZPDHbRan
directory-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/pkgdb/: package.cache
directory-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/flag-cache/: CS4032-API-0.1.0.0-EgQQtGNHqecCoPqeNdGKhN  bson-generic-0.0.8-HjHLZPRZTvYCcXcEWSgvyH  client-proxy-0.1.0.0-9Cpmz0lKqvHK6YQ1xNmbpc  directory-server-0.1.0.0-1QKvqFDw4is6KimF8oymfh
directory-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/pkgdb/: CS4032-API-0.1.0.0-EgQQtGNHqecCoPqeNdGKhN.conf  bson-generic-0.0.8-HjHLZPRZTvYCcXcEWSgvyH.conf  directory-server-0.1.0.0-1QKvqFDw4is6KimF8oymfh.conf  package.cache  use-haskell-api-0.1.0.0-6dkny6jhFfZ7NVYxlMrlga.conf  use-haskell1-0.1.0.0-4WPFWJXnDYbAI6iEVL9wjN.conf
directory-server/src/: Lib.hs
(+328 files in other folders)
