name:                directory-server
version:             0.1.0.0
synopsis:            Directory Server
description:         Please see README.md
homepage:            https://github.com/simonq80/CS4032-Project
license:             BSD3
license-file:        LICENSE
author:              Simon Quigley
maintainer:          siquigle@tcd.ie
copyright:           2017
category:            test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , transformers
                     , wai
                     , warp
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , bson-generic
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , mtl
                     , http-client
                     , split
                     , CS4032-API
  default-language:    Haskell2010

executable use-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory-server
  default-language:    Haskell2010

test-suite use-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/simonq80/CS4032-Project
